--- a/style.css
+++ b/style.css
@@ -1,175 +1,159 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
-
-*,::before,::after{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
+*, ::before, ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-
-:root{
-    --white:#ffff;
-    py-1:1.2rem
+html {
+  font-size: 62.5%;
 }
 
-html{
-    font-size: 62.5%;
+.header .nav {
+  background-color: black;
+  padding: 1.2rem;
 }
-
-.nav{
-    background-color: black;
-    padding: 1.2rem;
+.header .nav .nav-container {
+  max-width: 90vw;
+  margin: 0 auto;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.nav-container{
-    max-width: 90vw;
-    margin: 0 auto;
-    color:var(--white);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+.header .nav .nav-container .icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.carousel{
-    height: 100vh;
-    position: relative;
-    /* width: 100vw; */
-    overflow-y: hidden;
+.header .nav .nav-container .icons div {
+  padding: 0.5rem;
 }
-
-
-.carousel-btn{
-    position: absolute;
-    background: none;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    font-size: 4rem;
-    top: 50%;
-    z-index: 2;
-    /* transform: translateY(45%); */
-    color: white;
+.header .nav .headers .lists {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-.btn-prev{
-    left: 1rem;
+.header .nav .headers .lists .list a {
+  text-decoration: none;
+  color: white;
+  padding: 0.8rem;
+  font-size: 1.4rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: bolder;
 }
-.btn-next{
-    right: 4rem;
+.header .nav .headers .lists .list a img {
+  width: 80%;
+  height: 30px;
+  /* padding-left: 3rem; */
 }
-
-.img-container{
-    max-width: 100%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    display: flex;
+.header .carousel {
+  height: 100vh;
+  position: relative;
+  /* width: 100vw; */
+  overflow-y: hidden;
+}
+.header .carousel .carousel-btn {
+  position: absolute;
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  font-size: 4rem;
+  top: 50%;
+  z-index: 2;
+  /* transform: translateY(45%); */
+  color: white;
+}
+.header .carousel #prev {
+  left: 1rem;
+  background-color: rgb(49, 49, 49);
+  border-radius: 50%;
+  padding: 1.5rem;
+}
+.header .carousel #next {
+  background-color: rgb(49, 49, 49);
+  border-radius: 50%;
+  padding: 1.5rem;
+  right: 4rem;
+}
+.header .carousel .img-container {
+  max-width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+}
+.header .carousel .img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.header .carousel .img-container .text-container {
+  max-width: 800px;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  padding-top: 15rem;
+  display: flex;
+  justify-content: flex;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  height: 100%;
+}
+.header .carousel .img-container .text-container .heading {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12rem;
+}
+.header .carousel .img-container .text-container .heading-2 {
+  color: white;
+  font-size: 1.8rem;
+  font-family: "Abel", sans-serif;
+  margin-top: 2rem;
+}
+.header .carousel .img-container .text-container .btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+.header .carousel .img-container .text-container .btn-container .read {
+  padding: 1.2rem 3rem;
+  background: white;
+  border: none;
+  font-size: 1.9rem;
+  color: rgb(134, 129, 129);
+  text-transform: capitalize;
+  margin: 1.2rem;
+}
+.header .carousel .img-container .text-container .btn-container .shop {
+  padding: 1.2rem 3rem;
+  background: transparent;
+  border: 1px solid white;
+  font-size: 1.9rem;
+  color: rgb(255, 255, 255);
+  text-transform: capitalize;
+  margin: 1.2rem;
+}
+.header .carousel .fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {
+    transform: translateX(7%);
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* .mySlides{
     display: none;
 } */
 
-
-.img-container img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-.heading{
-color: #fff;
-text-transform: uppercase;
-font-size: 12rem;
-}
-.heading-2{
-    color:white;
-    font-size: 1.8rem;
-    font-family: 'Abel',sans-serif;
-    margin-top: 2rem;
-}
-
-.text-container{
-    max-width: 800px;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-    left: 20%;
-    padding-top: 15rem;
-    display: flex;
-    justify-content:flex;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    height: 100%;
-
-}
-
-.btn-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-}
-
-
-.icons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.icons div{
-    padding: 0.5rem;
-}
-
-.headers .lists{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.lists{
-    list-style: none;
-}
-
-.lists .list a{
-    text-decoration: none;
-    color: var(--white);
-    padding: 0.8rem;
-    font-size: 1.4rem;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bolder;
-}
-
-.list a img{
-    width:80%;
-    height: 30px;
-    /* padding-left: 3rem; */
-}
-
-.header{
-    background: linear-gradient(rgb(4, 45, 228),0.5),url("")
-}
-
-.read{
-    padding: 1.2rem 3rem;
-    background: white;
-    border: none;
-    font-size: 1.9rem;
-    color: rgb(134, 129, 129);
-    text-transform: capitalize;
-    margin: 1.2rem;
-}
-
-.shop{
-    padding: 1.2rem 3rem;
-    background: transparent;
-    border: 1px solid white;
-    font-size: 1.9rem;
-    color: rgb(255, 255, 255);
-    text-transform: capitalize;
-    margin: 1.2rem;
-}
+/*# sourceMappingURL=style.css.map */
