--- a/input.scss
+++ b/input.scss
@@ -483,10 +483,32 @@ html{
             font-weight: 700;
         }
     }
+
+
+    .multiple-items{
+        max-width: 90vw;
+        margin: 0 auto;
+        display: flex;
+    }
+
+    .card{
+        margin: 2rem;
+
+
+        .img{
+            img{
+                max-width: 100%;
+                max-height: 100%;
+
+            }
+        }
+    }
 }
 
 
-
+.slick-arrow{
+    font-size: 2.4rem;
+}
 
 
 
