--- a/style.css
+++ b/style.css
@@ -357,5 +357,21 @@ html {
   color: #747171;
   font-weight: 700;
 }
+.latepro .multiple-items {
+  max-width: 90vw;
+  margin: 0 auto;
+  display: flex;
+}
+.latepro .card {
+  margin: 2rem;
+}
+.latepro .card .img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.slick-arrow {
+  font-size: 2.4rem;
+}
 
 /*# sourceMappingURL=style.css.map */
